[package]
name = "exits-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
blake3 = "1.3.3"
ed25519-dalek = "1.0.1"
geph4-protocol = "0.15.0"
gibbername = {git = "https://github.com/mel-project/gibbername"}
hex = "0.4.3"
melprot = "0.13.4"
melstructs = "0.3.2"
melvm = "0.1.1"
melwallet = {git = "https://github.com/mel-project/melwallet"}
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
smol = "1.3.0"
smol_str = "0.1.23"
sqlx = {version = "0.6.3", features = ["runtime-async-std-rustls", "postgres"]}
stdcode = "0.1.14"
tmelcrypt = "0.2.7"
x25519-dalek = "1.2.0"
